<resources>
    <string name="app_name">Calling with ConnectionService</string>

    <string name="agora_app_id"><#YOUR APP ID#></string>

    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="num_left" translatable="false">*</string>
    <string name="num_right" translatable="false">#</string>

    <string name="label_account">Account</string>
    <string name="label_login">Login</string>
    <string name="hint_your_account">Please input your account</string>
</resources>
