<?xml version="1.0" encoding="UTF-8"?>
<io.agora.calling.with.connection.service.ui.AGRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/main_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/label_account" />

    <EditText
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/main_edit_title"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="80dp"
        android:background="@color/white"
        android:hint="@string/hint_your_account"
        android:inputType="number"
        android:lines="1"
        android:maxEms="32"
        android:maxLength="20"
        android:padding="8dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/account_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="80dp"
        android:background="@color/blue"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onClickLogin"
        android:text="@string/label_login"
        android:textColor="@color/white" />
</io.agora.calling.with.connection.service.ui.AGRelativeLayout>
